--- a/less/project/ferret/mixins.less
+++ b/less/project/ferret/mixins.less
@@ -213,3 +213,8 @@
 @desktop: ~"(min-width: 960px)";
 @large-desktop: ~"(min-width: 1280px)";
 @retina: ~"(-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi)";
+
+// Media Queries to Target Device Only
+@small-tablet-only: ~"(min-width: 600px) and (max-width: 767px)";
+@tablet-only: ~"(min-width: 768px) and (max-width: 959px)";
+@desktop-only: ~"(min-width: 960px) and (max-width: 1279px)";
