--- a/less/project/project_settings.less
+++ b/less/project/project_settings.less
@@ -21,19 +21,6 @@
 @link-hover: @dark;
 
 
-// User Select
-@user-select-bg: @dark;
-@user-select-color: @white;
-
-
-// Fonts
-@font-light: 'OpenSansLight';
-@font-normal: 'OpenSansReg';
-@font-semi: 'OpenSansSemi';
-@font-bold: 'OpenSansBold';
-@font-headline: 'OpenSansBold';
-
-
 // Colors
 @blue: #48b2c1;
 @orange: #fdaa4e;
@@ -70,42 +57,12 @@
 @paragraph-large-font-size: 110%;
 
 
-// Buttons
-@button-bg: @primary;
-@button-color: #fff;
-@button-font: @font-bold;
-@button-font-weight: normal;
-@button-font-size: 14px;
-@button-bg-alt: @blue;
-@button-submit: @red;
-@button-hover: #353535;
-@button-height: 40px;
-
-
-// Form Fields
-@input-bg: #fff;
-@input-height: 45px;
-@input-font: @font-normal;
-@input-font-size: 14px;
-@input-font-weight: normal;
-@input-color: @dark;
-@input-border: @light-gray;
-@input-bg-hover: #fff;
-@input-border-hover: #acacac;
-@input-bg-focus: lighten(@yellow, 10%);
-@input-border-focus: darken(@input-bg-focus, 25%);
-@input-margin-bottom: 20px;
-@input-textarea-height: 140px;
-@input-checkbox-size: 17px; // Checkbox & Radio Buttons
-@input-checkbox-bg: #fff;
-@input-checkbox-checked: url(../images/ferret/bg_checkbox.png); // Chrome Only
-@input-radio-checked: url(../images/ferret/bg_radio_button.png); // Chrome Only
-@input-label-font-size: 12px;
-@placeholder-color: #acacac;
-
-
-// Borders
-@border-color: #e1e1e1;
+// Fonts
+@font-light: 'OpenSansLight';
+@font-normal: 'OpenSansReg';
+@font-semi: 'OpenSansSemi';
+@font-bold: 'OpenSansBold';
+@font-headline: 'OpenSansBold';
 
 
 // Blockquotes
@@ -116,59 +73,17 @@
 @quote-author-before: "\2014 \0020";
 
 
-// Lists
-@list-item-checkbox: @green;
-@list-item-multiply: @red;
-@list-item-plus: @blue;
-@list-item-margin-bottom: 10px;
-@list-font-size: 90%;
-@list-definition-title-color: @dark;
+// Borders
+@border-color: #e1e1e1;
 
 
-// Tabs
-@tab-font: @font-semi;
-@tab-font-size: 12px;
-@tab-font-weight: normal;
-@tab-letter-spacing: 0;
-@tab-bg: #f9f9f9;
-@tab-color: @dark-gray;
-@tab-color-hover: @dark;
-@tab-color-active: @red;
-@tab-frame-bg: #fff;
-@tab-border-color: #e1e1e1;
-@tab-spacing: 25px;
-
-
-// Tables
-@table-header-color: #fff;
-@table-header-bg: @blue;
-@table-header-font-size: 14px;
-@table-row-bg: #f4f4f4;
-@table-font-size: 14px;
-@table-footer-font-size: 14px;
-@table-footer-color: @dark;
-@table-footer-bg: @light-gray;
-@table-border: @light-gray;
-
-
-// Tooltips
-@tooltip-bg: @dark;
-@tooltip-color: #fff;
-@tooltip-font: @font-semi;
-@tooltip-font-size: 85%;
-@tooltip-weight: normal;
-@tooltip-letter-spacing: 0;
-@tooltip-border-radius: 3px;
-
-
-// Fancybox
-@fancybox-close: @red;
-@fancybox-nav: @dark;
-@fancybox-nav-hover: @blue;
+// User Select
+@user-select-bg: @dark;
+@user-select-color: @white;
 
 
 // First Section Top Margin to Compensate for Fixed Top Navigation Bar
-@first-section-margin: @nav-bar-height;
+@first-section-margin: 60px;
 
 
 // Extras
