edits to head and less

--- a/less/project/project_styles.less
+++ b/less/project/project_styles.less
@@ -1,6 +1,10 @@
 // Project Styles
 
 
+// First Section
+.first-section {margin-top: @first-section-margin;}
+
+
 // JUST FOR FERRET DEMO - REMOVE BEFORE DEVELOPMENT
 @import 'ferret/header'; // OUT OF DATE CODE
 
@@ -53,5 +57,5 @@ span {
 		background: none;
 	}
 }
-/* END */
+// END DEMO CODE
 
