--- a/less/project/ferret/mixins.less
+++ b/less/project/ferret/mixins.less
@@ -8,10 +8,10 @@
 	transition: all @speed ease-in-out;
 }
 
-.transition-more(@property @speed @effect @delay) {
-	-webkit-transition: @property @speed @effect @delay;
-	-moz-transition: @property @speed @effect @delay;
-	transition: @property @speed @effect @delay;
+.transition-more(@transition) {
+	-webkit-transition: @transition;
+	-moz-transition: @transition;
+	transition: @transition;
 }
 
 
