fix to grid typo and added mixins

--- a/css/ferret.css
+++ b/css/ferret.css
@@ -235,7 +235,7 @@ Email: thelifemgmt@gmail.com
   [class^="box-"] {
     width: 100%;
   }
-  .box--half,
+  .box-half,
   .box-5th,
   .box-6th {
     width: 50%;
