--- a/less/ferret.less
+++ b/less/ferret.less
@@ -1,64 +1,64 @@
 /*********************************************
 Ferret Framework Main Stylesheet
-Last Updated: 9/12/13
+Last Updated: 11/28/13
 Written by: Sean Stopnik
 Email: thelifemgmt@gmail.com
 *********************************************/
 
 
 // Project Settings & Variables (Do NOT Remove)
-@import "project/project_settings.less";
+@import "project/project-settings";
 
 
 // Base (Do NOT Remove)
-@import "project/ferret/mixins.less";
-@import "project/ferret/grid/box_grid.less";
-@import "project/ferret/fonts.less";
-@import "project/ferret/reset.less";
-@import "project/ferret/base.less";
-@import "project/ferret/typography.less";
+@import "project/ferret/_mixins";
+@import "project/ferret/grid/_box-grid";
+@import "project/ferret/_fonts";
+@import "project/ferret/_reset";
+@import "project/ferret/_base";
+@import "project/ferret/_typography";
 
 
 // Compontents
 
 // Buttons (Remove if Not Needed)
-@import "project/ferret/components/buttons.less"; // Button Styles
-@import "project/ferret/components/variables/buttons_variables.less"; // Button Variables
+@import "project/ferret/components/_buttons"; // Button Styles
+@import "project/ferret/components/variables/_buttons-variables"; // Button Variables
 
 
 // Forms (Remove if Not Needed)
-@import "project/ferret/components/forms.less"; // Form Styles
-@import "project/ferret/components/variables/forms_variables.less"; // Form Variables
+@import "project/ferret/components/_forms"; // Form Styles
+@import "project/ferret/components/variables/_forms-variables"; // Form Variables
 
 
 // Lists (Remove if Not Needed)
-@import "project/ferret/components/lists.less"; // List Styles
-@import "project/ferret/components/variables/lists_variables.less"; // list Variables
+@import "project/ferret/components/_lists"; // List Styles
+@import "project/ferret/components/variables/_lists-variables"; // list Variables
 
 
 // Tabs (Remove if Not Needed)
-@import "project/ferret/components/tabs.less"; // Tabs Styles
-@import "project/ferret/components/variables/tabs_variables.less"; // Tabs Variables
+@import "project/ferret/components/_tabs"; // Tabs Styles
+@import "project/ferret/components/variables/_tabs-variables"; // Tabs Variables
 
 
 // Tables (Remove if Not Needed)
-@import "project/ferret/components/tables.less"; // Tables Styles
-@import "project/ferret/components/variables/tables_variables.less"; // Tables Variables
+@import "project/ferret/components/_tables"; // Tables Styles
+@import "project/ferret/components/variables/_tables-variables"; // Tables Variables
 
 
 // Tooltips (Remove if Not Needed)
-@import "project/ferret/components/tooltips.less"; // Tooltip Styles
-@import "project/ferret/components/variables/tooltips_variables.less"; // Tooltip Variables
+@import "project/ferret/components/_tooltips"; // Tooltip Styles
+@import "project/ferret/components/variables/_tooltips-variables"; // Tooltip Variables
 
 
 // Main Project Specific CSS
-@import "project/project_styles.less"; // Located in the Project Folder
+@import "project/project-styles"; // Located in the Project Folder
 
 
 // Fancybox Styles (Remove if Not Using Fancybox)
-@import "project/ferret/components/fancybox.less"; // Fancybox Styles
-@import "project/ferret/components/variables/fancybox_variables.less"; // Fancybox Variables
+@import "project/ferret/components/_fancybox"; // Fancybox Styles
+@import "project/ferret/components/variables/_fancybox-variables"; // Fancybox Variables
 
 
 // IE 6-7 Support (Include this File ONLY if supporting IE 6-7)
-//@import "project/ferret/grid/box_grid_ie6_7.less";
+//@import "project/ferret/grid/_box-grid-ie6-7";
