reorganized less and sass folders

--- a/less/project/project-styles.less
+++ b/less/project/project-styles.less
@@ -6,7 +6,7 @@
 
 
 // JUST FOR FERRET DEMO - REMOVE BEFORE DEVELOPMENT
-@import 'ferret/_header'; // OUT OF DATE CODE
+@import 'ferret/shared/_header'; // OUT OF DATE CODE
 
 section {
 	padding: 20px 0;
