--- a/sass/project/ferret/components/_forms.scss
+++ b/sass/project/ferret/components/_forms.scss
@@ -5,9 +5,11 @@
 	float: left;
 	width: 100%;
 	height: $input-height;
-	font-family: $input-font;
-	font-size: $input-font-size;
-	font-weight: $input-font-weight;
+	font: {
+		family: $input-font;
+		size: $input-font-size;
+		weight: $input-font-weight;
+	}
 	letter-spacing: $base-letter-spacing;
 	line-height: 2;
 	color: $input-color;
