--- a/less/project/ferret/grid/_box-grid.less
+++ b/less/project/ferret/grid/_box-grid.less
@@ -143,7 +143,7 @@
 	}
 }
 
-@media @device {
+@media @small-tablet and @device {
 	[class^="@{grid-box-name}-"] {
 		width: 100%;
 	}
@@ -151,7 +151,8 @@
 	.@{grid-box-name}- {		
 		&half,
 		&5th,
-		&6th {
+		&6th,
+		&8 {
 			width: 50%;
 		}
 	}
