--- a/sass/project/ferret/grid/_box-grid.scss
+++ b/sass/project/ferret/grid/_box-grid.scss
@@ -5,9 +5,7 @@
 
 // Box Grid
 * {
-	-webkit-box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	box-sizing: border-box;
+	@include box-sizing;
 	
 	html .row {
 		height: 1%;
