--- a/sass/project/ferret/globals/_mixins.scss
+++ b/sass/project/ferret/globals/_mixins.scss
@@ -88,6 +88,14 @@
 }
 
 
+// Box Sizing
+@mixin box-sizing($box: border-box) {
+	-webkit-box-sizing: $box;
+	-moz-box-sizing: $box;
+	box-sizing: $box;
+}
+
+
 // Triangle
 @mixin triangle-base {
 	position: absolute;
