added keyframe mixin

--- a/sass/project/ferret/globals/_mixins.scss
+++ b/sass/project/ferret/globals/_mixins.scss
@@ -74,6 +74,18 @@
 }
 
 
+// Keyframes
+@mixin keyframes($name) {
+	@-webkit-keyframes $name {
+		@content;
+	}
+	
+	@keyframes $name {
+		@content;
+	}
+}
+
+
 // Width and Height
 @mixin size($width: false, $height: false) {
 	@if $height != false { 
