--- a/sass/ferret-sass.scss
+++ b/sass/ferret-sass.scss
@@ -7,13 +7,13 @@ Email: thelifemgmt@gmail.com
 
 
 // Project Settings & Variables (Do NOT Remove)
-@import 'project/project-settings';
+@import 'project/_project-settings';
 
 
 // Base (Do NOT Remove)
 @import 'project/ferret/globals/_mixins';
 @import 'project/ferret/grid/_box-grid';
-@import 'project/project-fonts';
+@import 'project/_project-fonts';
 @import 'project/ferret/globals/_reset';
 @import 'project/ferret/shared/_base';
 @import 'project/ferret/shared/_typography';
@@ -53,7 +53,7 @@ Email: thelifemgmt@gmail.com
 
 
 // Main Project Specific CSS
-@import 'project/project-styles'; // Located in the Project Folder
+@import 'project/_project-styles'; // Located in the Project Folder
 
 
 // Fancybox Styles (Remove if Not Using Fancybox)
