--- a/sass/project/ferret/globals/_mixins.scss
+++ b/sass/project/ferret/globals/_mixins.scss
@@ -1,6 +1,16 @@
 // Default Mix-ins
 
 
+// Clearfix - use @extend %clearfix;
+%clearfix {
+	&:after {
+		display: block;
+		content: '';
+		clear: both;
+	}
+}
+
+
 // Transitions
 @mixin transition($speed: .15s) {
 	-webkit-transition: all $speed ease-in-out;
@@ -67,7 +77,7 @@
 }
 
 
-// Anitmation
+// Animation
 @mixin animate($name, $speed: .2s, $ease: ease-in, $delay: .5s, $when: both) {
 	-webkit-animation: $name $speed $ease $delay $when;
 	animation: $name $speed $ease $delay $when;
@@ -87,16 +97,9 @@
 
 
 // Width and Height
-@mixin size($width: false, $height: false) {
-	@if $height != false { 
-		width: $width;
-		height: $height;
-	}
-	
-	@else {
-		width: $width;
-		height: $width;
-	}
+@mixin size($width, $height: $width) {
+	width: $width;
+	height: $height;
 }
 
 
@@ -108,7 +111,7 @@
 }
 
 
-// Triangle
+// Triangles
 @mixin triangle-base {
 	position: absolute;
 	@include size(0);
@@ -208,6 +211,13 @@
 		weight: normal;
 		style: normal;
 	}
+}
+
+
+// REM Units with px fallback (assumes html is set to font-size: 62.5%)
+@mixin font-size($value: 1.6) {
+	font-size: $value + px;
+	font-size: ($value / 10) + rem;
 }
 
 
